implement node is equal